Keep a "last band we touched" cursor so we can avoid seeking through the whole linked list for multiple appends to the end.  Bug 270392, r+sr=roc